feat: auth signup
